--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Portfolio Item
-                    <small>Item Subheading</small>
+                <h1 class="page-header">OSSA
+                    <small>Online Subadult Skeletal Aging</small>
                 </h1>
             </div>
         </div>
