--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                <img class="img-responsive" src="https://www.google.com/imgres?imgurl=http%3A%2F%2Fwww.rch.org.au%2FuploadedImages%2FMain%2FContent%2Fclinicalguide%2Fskeleton_front.gif&imgrefurl=http%3A%2F%2Fwww.rch.org.au%2Fclinicalguide%2Fguideline_index%2FChild_Abuse_Diagrams%2F&docid=wqwhQQH474gMnM&tbnid=WfGbNPpgsfCIVM%3A&vet=1&w=336&h=576&bih=716&biw=1168&q=child%20skeleton%20diagram&ved=0ahUKEwj5hPjIkeDRAhUmwYMKHZYhAf0QMwgbKAEwAQ&iact=mrc&uact=8" alt="">
             </div>
 
             <div class="col-md-4">
