--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Fontanelle
-                    <small>Online Subadult Skeletal Aging</small>
+                    <small>The Digital Age Estimator of Subadult Skeletons</small>
                 </h1>
             </div>
         </div>
@@ -79,6 +79,7 @@
             <div class="col-md-4">
                 <h3>Project Description</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+            </div>
                 
                 <div class="col-lg-12">
                 <img class="img-responsive"  src="img/juve_skel.png" alt="" width="70%">
