--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+                <p>This project is aimed at aquainting students of physical anthropology, osteology, and ____ with the different methods used to estimate the age-at-death of human subadult skeletal remains.  </p>
             </div>
                 
                 <div class="col-lg-12">
