--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 
                 <h3>Instructions</h3>
                 <ul>
-                    <li>Click on the bone group on the diagram of which you wish to estimate the age.  The groups are:</li>
+                    <li>Click on the bone group on the diagram of which you wish to estimate the age.  The groups are:
                     <ul>
                         <li>The Skull</li>
                         <li>The Thorax</li>
@@ -99,6 +99,7 @@
                         <li>The Pelvis</li>
                         <li>Legs</li>
                     </ul>
+                    </li>
                     
                     <li>Dolor Sit Amet</li>
                     <li>Consectetur</li>
