--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 
                 <h3>Instructions</h3>
                 <ul>
-                    <li>Click on the bone group on the diagram of which you wish to estimate the age.  The groups are:
+                    <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
                     <ul>
                         <li>The Skull</li>
                         <li>The Thorax</li>
@@ -101,7 +101,7 @@
                     </ul>
                     </li>
                     
-                    <li>Dolor Sit Amet</li>
+                    <li>Compare the bone/element you have to the </li>
                     <li>Consectetur</li>
                     <li>Adipiscing Elit</li>
                 </ul>
