--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         
         <section class="container">
             <div class="col-lg-8">
-                <img class="img-responsive" src="img/juve_skel6.svg" width="70%">
+                <img class="img-responsive" src="img/juve_skel6.svg" alt="juvenile skeleton" width="70%">
             </div>
             
             <div class="col-lg-2">
