--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                 <ul>
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
                     <ul>
-                        <li>The Skull</li>
-                        <li>The Thorax</li>
+                        <li>Skull</li>
+                        <li>Thorax</li>
                         <li>Arms</li>
-                        <li>The Pelvis</li>
+                        <li>Pelvis</li>
                         <li>Legs</li>
                     </ul>
                     </li>
