--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             
             <div class="col-md-6">
                 <h3>Instructions</h3>
-                <ul>
+                <ul class="columns" data-columns="2">
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
                     <ul>
                         <li>Skull</li>
