--- a/index.html
+++ b/index.html
@@ -88,13 +88,16 @@
                 <h3>Instructions</h3>
                 <ul>
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
-                    <ul class="columns" data-columns="2">
-                        <li>Skull</li>
-                        <li>Thorax</li>
-                        <li>Arms</li>
-                        <li>Pelvis</li>
-                        <li>Legs</li>
+                    <ul style="float: left; width: 50%;">
+                       <li>Skull</li>
+                       <li>Arms</li>
+                       <li>Legs</li>
                     </ul>
+                   <ul style="float: left; width: 50%;">
+                     <li>Thorax</li>
+                     <li>Pelvis</li>
+                   </ul>
+                               
                     </li>
                     <li>Compare the bone/element you have to the aging methods provided</li>
                     <li>Input your age range in the "Ages Estimator" box on the right</li>
