--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         
         <section class="container">
             <div class="col-lg-8">
-                <img class="img-responsive" src="img/juveskelcomp.svg" alt="juvenile skeleton" width="70%">
+                <img class="img-responsive" src="img/juve_skel_comp.svg" alt="juvenile skeleton" width="70%">
             </div>
              
             <div class="col-lg-4">
