--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="col-lg-8" id="juve_skel">
             
                 <script src="raphael.js"></script>
-                <script src="juve_skel_comp.js"></script>
+                <script src="juve_skel.js"></script>
              
                 <div class="col-lg-4">
                     <p>STUFF STUFF STUFF</p>
