--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                 <ul>
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
                     <ul style="float: left; width: 40%;">
-                       <li>Skull</li>
-                       <li>Arms</li>
-                       <li>Legs</li>
+			    <li><a href="skull.html">Skull</a></li>
+			    <li><a href="arms.html">Arms</a></li>
+			    <li><a href="legs.html">Legs</a></li>
                     </ul>
                    <ul style="float: left; width: 40%;">
-                     <li>Thorax</li>
-                     <li>Pelvis</li>
+			   <li><a href="thorax.html">Thorax</a></li>
+			   <li><a href="thorax.html">Pelvis</a></li>
                    </ul>
                                
                     </li>
