--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="#">About</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#">References</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
