--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
                     <ul style="float: left; width: 40%;">
 			    <li><a href="skull.html">Skull</a></li>
-			    <li><a href="arms.html">Arms</a></li>
-			    <li><a href="legs.html">Legs</a></li>
+			    <li><a href="arms.html">Upper Limbs</a></li>
+			    <li><a href="legs.html">Lower Limbs</a></li>
                     </ul>
                    <ul style="float: left; width: 40%;">
 			   <li><a href="thorax.html">Thorax</a></li>
-			   <li><a href="thorax.html">Pelvis</a></li>
+			   <li><a href="thorax.html">Pelvic Girdle</a></li>
                    </ul>
 			</li>           
                    
