Update and rename legs.html to lower_limbs.html

--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>Legs</title>
+    <title>Lower Limbs</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
