Update and rename arms.html to upper_limbs.html

--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>Arms</title>
+    <title>Upper Limbs</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
