--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
                     <ul style="float: left; width: 40%;">
 			    <li><a href="skull.html">Skull</a></li>
-			    <li><a href="arms.html">Upper Limbs</a></li>
-			    <li><a href="legs.html">Lower Limbs</a></li>
+			    <li><a href="upper_limbs.html">Upper Limbs</a></li>
+			    <li><a href="lower_limbs.html">Lower Limbs</a></li>
                     </ul>
                    <ul style="float: left; width: 40%;">
 			   <li><a href="thorax.html">Thorax</a></li>
-			   <li><a href="thorax.html">Pelvic Girdle</a></li>
+			   <li><a href="pelvic_girdle.html">Pelvic Girdle</a></li>
                    </ul>
 			</li>           
                    
@@ -161,8 +161,9 @@
        id="c_m_d"
        transform="matrix(1.0000002,0,0,0.99753391,-10.352353,41.676395)"
        inkscape:label="#g85">
-        <a
-     xlink:href="http://www.eskeletons.org/">
+	    
+        <a href="skull.html">
+		
       <path
          inkscape:connector-curvature="0"
          d="m 104.7,47.373 c 1.8419,-0.86193 4.4903,-2.6 5.4142,-3.5532 0.85164,-0.87866 1.2297,-1.6734 1.2297,-2.585 0,-0.5508 0.63943,-3.2924 0.95182,-4.081 0.11745,-0.29649 0.0516,-0.33225 -0.38954,-0.21166 -0.35048,0.0958 -0.88365,0.68453 -1.569,1.7326 -0.57098,0.87312 -1.4069,1.9544 -1.8576,2.4028 -1.0783,1.0729 -2.8527,1.8575 -4.3547,1.9256 -0.6526,0.0296 -1.2717,0.10482 -1.3758,0.16717 -0.33555,0.20096 -2.8173,0.24372 -3.8935,0.0671 -0.40746,-0.0669 -0.93133,-0.11938 -1.1642,-0.11666 -0.58451,0.007 -1.9462,-0.38971 -2.9865,-0.86971 -0.47842,-0.22073 -0.94312,-0.40134 -1.0327,-0.40134 -0.58283,0 -3.234,-3.096 -3.6994,-4.3201 -0.12955,-0.34076 -0.37066,-0.54827 -0.63702,-0.54827 -0.52563,0 -0.52561,-0.008 -0.0067,2.1562 0.23202,0.9678 0.42252,2.084 0.42333,2.4805 0.0015,0.74006 0.57157,1.6618 1.6564,2.6782 0.76404,0.71586 5.8079,3.2776 7.1293,3.621 1.7317,0.44994 4.574,0.19894 6.162,-0.54415 z"
