--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
     <![endif]-->
 
 	<style>
-		path:hover { fill: #979797;}
+		path:hover { fill: #979797;
+			-webkit-transform: scale(1.2);
+			-moz-transform: scale(1.2);
+			-o-transform: scale(1.2);
+			transform: scale(1.2);
+			transition: all 0.3s;
+			-webkit-transition: all 0.3s;
+		}
+		
 	</style>
    
 
