--- a/index.html
+++ b/index.html
@@ -30,13 +30,6 @@
 			fill: #979797;
 			transform:scale (1.2); 
 			}
-		div.fixed {
-			position: fixed;
-   		 	bottom: 0;
-    			right: 0;
-    			width: 300px;
-    			border: 3px solid #73AD21;
-			}
 		
 	</style>
    
@@ -2014,7 +2007,7 @@
            
             </div>
             
-		<div class="col-lg-4"; class="fixed";>
+		<div class="col-lg-4";>
 			
                     <p>STUFF STUFF STUFF!!</p>
                     <p>AGE RANGE BOX WILL GO HERE</p>
