--- a/index.html
+++ b/index.html
@@ -2007,7 +2007,7 @@
            
             </div>
             
-		<div class="col-lg-4";>
+		<div class="col-lg-4">
 			
                     <p>STUFF STUFF STUFF!!</p>
                     <p>AGE RANGE BOX WILL GO HERE</p>
