--- a/index.html
+++ b/index.html
@@ -54,14 +54,27 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+		   <li>
+			   <div class="dropdown">
+  				<button class="dropbtn">Elements</button>
+ 				<div class="dropdown-content">
+					
+    				<a href="skull.html">Skull</a>
+    				<a href="upper_limbs.html">Upper Limbs</a>
+    				<a href="thorax.html">Thorax</a>
+				<a href="pelvic_girdle.html">Pelvic Girdle</a>
+				<a href="lower_limbs.html">Lower Limbs</a>	
+				   
+				</div>
+			</div>
                     <li>
-                        <a href="#">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="#">References</a>
+                        <a href="references.html">References</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
