--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <ul class="nav navbar-nav">
 		   <li>
 			   <div class="dropdown">
-  				<button class="dropbtn">Elements</button>
+  				<a>Elements</a>
  				<div class="dropdown-content">	
     				<a href="skull.html">Skull</a>
     				<a href="upper_limbs.html">Upper Limbs</a>
