--- a/index.html
+++ b/index.html
@@ -55,15 +55,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
 		   <li class = "dropdown">
-          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Elements <span class="caret"></span></a>
          			 <ul class="dropdown-menu">
-            			<li><a href="#">Action</a></li>
-            			<li><a href="#">Another action</a></li>
-            			<li><a href="#">Something else here</a></li>
-            			<li role="separator" class="divider"></li>
-            			<li><a href="#">Separated link</a></li>
-		    		<li role="separator" class="divider"></li>
-            			<li><a href="#">One more separated link</a></li>
+            			<li><a href="skull.html">Skull</a></li>
+            			<li><a href="upper_limbs.html">Upper Limbs</a></li>
+            			<li><a href="thorax.html">Thorax</a></li>
+            			<li><a href="pelvic_girdle.html">Pelvic Girdle</a></li>
+            			<li><a href="lower_limbs.html">Lower Limbs</a></li>
          			 </ul>
         			</li>
                     <li>
