--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <!-- Portfolio Item Heading -->
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12" id="head">
                 <h1 class="page-header">J-Skel
                     <small>The Digital Age Estimator of Subadult Skeletons</small>
                 </h1>
@@ -98,15 +98,15 @@
         <!-- Portfolio Item Row -->
         <section class="row">
 
-            <div class="col-md-6">
+            <div class="col-md-6" id="description">
                 <h3>Project Description</h3>
                 <p>This project is aimed at aquainting students of physical anthropology, osteology, and ____ with the different methods used to estimate the age-at-death of human subadult skeletal remains.  </p>
             </div>
             
-            <div class="col-md-6">
+            <div class="col-md-6" id="instruction">
                 <h3>Instructions</h3>
                 <ul>
-                    <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
+                    <li>Click on the bone group on the diagram of which bone you wish to assess the age.
                     <ul style="float: left; width: 40%;">
 			    <li><a href="skull.html">Skull</a></li>
 			    <li><a href="upper_limbs.html">Upper Limbs</a></li>
