--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -54,6 +54,18 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+			
+			  <li class = "dropdown">
+          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Elements <span class="caret"></span></a>
+         			 <ul class="dropdown-menu">
+            			<li><a href="skull.html">Skull</a></li>
+            			<li><a href="upper_limbs.html">Upper Limbs</a></li>
+            			<li><a href="thorax.html">Thorax</a></li>
+            			<li><a href="pelvic_girdle.html">Pelvic Girdle</a></li>
+            			<li><a href="lower_limbs.html">Lower Limbs</a></li>
+         			 </ul>
+        			</li>
+                    <li>
                     <li>
                         <a href="about.html">About</a>
                     </li>
