--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!-- Portfolio Item Row -->
         <section class="row">
 
-            <div class="col-md-6" id="description" position="fixed">
+            <div class="col-md-6" id="description">
                 <h3>Project Description</h3>
                 <p>This project is aimed at aquainting students of physical anthropology, osteology, and ____ with the different methods used to estimate the age-at-death of human subadult skeletal remains.  </p>
             </div>
