--- a/index.html
+++ b/index.html
@@ -2019,7 +2019,7 @@
             
 		<div class="col-sm-4">
 			
-                    <p>STUFF STUFF STUFF!!</p>
+                    <p>STUFF STUFF!!</p>
                     <p>AGE RANGE BOX WILL GO HERE</p>
                 </div>
                 
