--- a/index.html
+++ b/index.html
@@ -2017,8 +2017,8 @@
            
             </div>
             
-		<div class="col-sm-4">
-			
+		<div class="col-sm-4" id="range">
+			<br>
                     <p>STUFF STUFF!!</p>
                     <p>AGE RANGE BOX WILL GO HERE</p>
                 </div>
