--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!-- Custom CSS -->
     <link href="css/portfolio-item.css" rel="stylesheet">
 
+	<link rel="stylesheet" type="text/css" href="main.css"/>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
