--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <!-- Custom CSS -->
     <link href="css/portfolio-item.css" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="main.css"/>
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -2019,7 +2017,7 @@
            
             </div>
             
-		<div class="col-sm-4" id="range">
+		<div class="col-sm-4" id="range" style="color: #000000">
 			<br>
                     <p>STUFF STUFF!!</p>
                     <p>AGE RANGE BOX WILL GO HERE</p>
