--- a/skull.html
+++ b/skull.html
@@ -161,7 +161,7 @@
 </svg>
             </div>
             
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <h3>Bones of the skull</h3>
                 <ul>
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
@@ -171,6 +171,7 @@
 			    <li><a href="temporal.html">Temporal</a></li>
 			    <li><a href="occipital.html">Occipital</a></li>
 			    <li><a href="maxilla.html">Maxilla</a></li>
+			    <li><a href="sphenoid.html">Sphenoid</a></li>
 			    <li><a href="mandible.html">Mandible</a></li>
                     </ul>
                   
