--- a/skull.html
+++ b/skull.html
@@ -30,7 +30,10 @@
 			fill: #979797;
 			transform:scale (1.2); 
 			}
-		
+		div.fixed {
+			 position: fixed;
+ 			 border: 3px solid #73AD21;
+			}		
 	</style>
    
 
