--- a/skull.html
+++ b/skull.html
@@ -189,7 +189,7 @@
 		 <div class="col-md-4" class="fixed">
                 <h3>Bones of the skull</h3>
                 <ul>
-                    <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
+                    <li>The bones of the skull used for juvenile ageing in this project are:
                     <ul>
 			    <li><a href="frontal.html">Frontal</a></li>
 			    <li><a href="parietal.html">Parietal</a></li>
