--- a/skull.html
+++ b/skull.html
@@ -186,7 +186,8 @@
                 </ul>
             </div>
 		
-		 <div class="col-md-4" class="fixed">
+		 <div class="col-md-4"> 
+			 <div class="fixed">
                 <h3>Bones of the skull</h3>
                 <ul>
                     <li>The bones of the skull used for juvenile ageing in this project are:
@@ -207,6 +208,7 @@
                     <li>Hit "Save Age Range" if you wish to look at another bone or element</li>
                 </ul>
             </div>
+		</div>
        
         </section>
         
