--- a/skull.html
+++ b/skull.html
@@ -189,6 +189,7 @@
 		 <div class="col-md-4"> 
 			 <div class="fixed">
                 <h3>Bones of the skull</h3>
+				 <h3>Age Range Box</h3>
                 <ul>
                     <li>The bones of the skull used for juvenile ageing in this project are:
                     <ul>
