--- a/skull.html
+++ b/skull.html
@@ -32,8 +32,8 @@
 			}
 		div.fixed {
 			 position: fixed;
-			 background: #FFFFFF
- 			 border: 3px solid #73AD21;
+			 color: #FFFFFF
+ 			 border: 3px solid #000000;
 			}		
 	</style>
    
