--- a/skull.html
+++ b/skull.html
@@ -177,6 +177,7 @@
 			    <li><a href="maxilla.html">Maxilla</a></li>
 			    <li><a href="sphenoid.html">Sphenoid</a></li>
 			    <li><a href="mandible.html">Mandible</a></li>
+			    <li><a href="dentition.html">Dentition</a></li>
                     </ul>
                   
 			</li>           
