--- a/skull.html
+++ b/skull.html
@@ -17,6 +17,7 @@
 
     <!-- Custom CSS -->
     <link href="css/portfolio-item.css" rel="stylesheet">
+	 <link rel="stylesheet" type="text/css" href="main.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,12 +31,7 @@
 			fill: #979797;
 			transform:scale (1.2); 
 			}
-		div.fixed {
-			
-			 position: fixed;
- 			 border: 3px solid #000000;
-			 
-			}		
+
 	</style>
    
 
