--- a/skull/frontal.html
+++ b/skull/frontal.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>J-Skel</title>
+    <title>Frontal</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -26,10 +26,6 @@
     <![endif]-->
 
 	<style>
-		path:hover { 
-			fill: #979797;
-			transform:scale (1.2); 
-			}
 		
 	</style>
    
@@ -86,9 +82,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12" id="head">
-                <h1 class="page-header">J-Skel
-                    <small>The Digital Age Estimator of Subadult Skeletons</small>
-                </h1>
+                <h1 class="page-header">The Frontal bone</h1>
             </div>
         </div>
         <!-- /.row -->
