--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -174,12 +174,12 @@
 	<div class="col-md-4">	    
 		<h2>Bones of the upper limbs</h2>
 		<ul>
-			<li a href="upplimbs.html/scapula">Scapula</li>
-			<li a href="upplimbs.html/clavicle">Clavicle</li>
-			<li a href="upplimbs.html/humerus">Humerus</li>
-			<li a href="upplimbs.html/radius">Radius</li>
-			<li a href="upplimbs.html/ulna">Ulna</li>
-			<li a href="upplimbs.html/hands">Hands</li>
+			<li a href="upplimbs/scapula.html">Scapula</li>
+			<li a href="upplimbs/clavicle.html">Clavicle</li>
+			<li a href="upplimbs/humerus.html">Humerus</li>
+			<li a href="upplimbs/radius.html">Radius</li>
+			<li a href="upplimbs/ulna.html">Ulna</li>
+			<li a href="upplimbs/hands.html">Hands</li>
 		</ul>
 	</div>
             
