--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -174,12 +174,12 @@
 	<div class="col-md-4">	    
 		<h2>Bones of the upper limbs</h2>
 		<ul>
-			<li a href="upplimbs/scapula.html">Scapula</li>
-			<li a href="upplimbs/clavicle.html">Clavicle</li>
-			<li a href="upplimbs/humerus.html">Humerus</li>
-			<li a href="upplimbs/radius.html">Radius</li>
-			<li a href="upplimbs/ulna.html">Ulna</li>
-			<li a href="upplimbs/hands.html">Hands</li>
+			<li><a href="upplimbs/scapula.html">Scapula</a></li>
+			<li><a> href="upplimbs/clavicle.html">Clavicle</a></li>
+			<li><a> href="upplimbs/humerus.html">Humerus</a></li>
+			<li><a> href="upplimbs/radius.html">Radius</a></li>
+			<li><a> href="upplimbs/ulna.html">Ulna</a></li>
+			<li><a> href="upplimbs/hands.html">Hands</a></li>
 		</ul>
 	</div>
             
