--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -175,16 +175,16 @@
 		<h2>Bones of the upper limbs</h2>
 		<ul>
 			<li><a href="upplimbs/scapula.html">Scapula</a></li>
-			<li><a> href="upplimbs/clavicle.html">Clavicle</a></li>
-			<li><a> href="upplimbs/humerus.html">Humerus</a></li>
-			<li><a> href="upplimbs/radius.html">Radius</a></li>
-			<li><a> href="upplimbs/ulna.html">Ulna</a></li>
-			<li><a> href="upplimbs/hands.html">Hands</a></li>
+			<li><a href="upplimbs/clavicle.html">Clavicle</a></li>
+			<li><a href="upplimbs/humerus.html">Humerus</a></li>
+			<li><a href="upplimbs/radius.html">Radius</a></li>
+			<li><a href="upplimbs/ulna.html">Ulna</a></li>
+			<li><a href="upplimbs/hands.html">Hands</a></li>
 		</ul>
 	</div>
             
-            <div class="col-md-4">
-                <h3>Instructions</h3>
+            <div class="col-md-4" class="fixed">
+                <h3>Age Range</h3>
                 <ul>
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
                     <ul style="float: left; width: 40%;">
