--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>Fontanelle</title>
+    <title>J-Skel</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
