--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -168,8 +168,14 @@
 		</div>
 
             <div class="col-md-4">
-                <h3>Project Description</h3>
-                <p>This project is aimed at aquainting students of physical anthropology, osteology, and ____ with the different methods used to estimate the age-at-death of human subadult skeletal remains.  </p>
+                <h3>Bones of the lower limbs</h3>
+                <ul>
+			<li><a href="lowlimbs/femur.html">Femur</a></li>
+			<li><a href="lowlimbs/tibia.html">Tibia</a></li>
+			<li><a href="lowlimbs/fibula.html">Fibula</a></li>
+			<li><a href="lowlimbs/patella.html">Patella</a></li>
+			<li><a href="lowlimbs/feet.html">Feet</a></li>
+		    </ul>
             </div>
             
             <div class="col-md-4">
