--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>Fontanelle</title>
+    <title>J-Skel: Pelvic Girdle</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
