--- a/skull/frontal.html
+++ b/skull/frontal.html
@@ -57,11 +57,11 @@
 		   <li class = "dropdown">
           		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Elements <span class="caret"></span></a>
          			 <ul class="dropdown-menu">
-            			<li><a href="skull.html">Skull</a></li>
-            			<li><a href="upper_limbs.html">Upper Limbs</a></li>
-            			<li><a href="thorax.html">Thorax</a></li>
-            			<li><a href="pelvic_girdle.html">Pelvic Girdle</a></li>
-            			<li><a href="lower_limbs.html">Lower Limbs</a></li>
+            			<li><a href="../skull.html">Skull</a></li>
+            			<li><a href="../upper_limbs.html">Upper Limbs</a></li>
+            			<li><a href="../thorax.html">Thorax</a></li>
+            			<li><a href="../pelvic_girdle.html">Pelvic Girdle</a></li>
+            			<li><a href="../lower_limbs.html">Lower Limbs</a></li>
          			 </ul>
         			</li>
                     <li>
