--- a/skull/frontal.html
+++ b/skull/frontal.html
@@ -10,8 +10,8 @@
     <meta name="author" content="">
 
 
-    <title>J-Skel: Skull</title>
-
+    <title>J-Skel: Frontal bone</title>
+	
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
@@ -65,13 +65,13 @@
          			 </ul>
         			</li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="../about.html">About</a>
                     </li>
                     <li>
-                        <a href="references.html">References</a>
+                        <a href="../references.html">References</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="../contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -86,8 +86,8 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12" id="head">
-                <h1 class="page-header">J-Skel
-                    <small>The Digital Age Estimator of Subadult Skeletons</small>
+                <h1 class="page-header">Frontal bone
+                    <small>Closure of the metopic suture</small>
                 </h1>
             </div>
         </div>
@@ -97,13 +97,14 @@
 
         <!-- Portfolio Item Row -->
         <section class="row">
+		<div>FIGURES OF METOPIC SUTURE CLOSURE</div>
 
-            <div class="col-md-6" id="description">
+            <div class="col-md-4" id="description">
                 <h3>Project Description</h3>
-                <p>This project is aimed at aquainting students of physical anthropology, osteology, and ____ with the different methods used to estimate the age-at-death of human subadult skeletal remains.  </p>
+                <p>The frontal bone is made up of two separate bones divided down the midline.  They are separated by the metopic suture which fuses within the first few years of life. </p>
             </div>
             
-            <div class="col-md-6" id="instruction">
+            <div class="col-md-4" id="fixed">
                 <h3>Instructions</h3>
                 <ul>
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.
