--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -196,7 +196,8 @@
 		</ul>
 	</div>
             
-            <div class="col-md-4" class="fixed">
+            <div class="col-md-4"> 
+		    <div class="fixed">
                 <h3>Age Range</h3>
                 <ul>
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.  The groups are:
@@ -215,6 +216,7 @@
                     <li>Input your age range in the "Ages Estimator" box on the right</li>
                     <li>Hit "Save Age Range" if you wish to look at another bone or element</li>
                 </ul>
+		    </div>
             </div>
        
         </section>
