--- a/skull/frontal.html
+++ b/skull/frontal.html
@@ -86,7 +86,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12" id="head">
-                <h1 class="page-header">Frontal bone
+                <h1 class="page-header">Frontal bone:
                     <small>Closure of the metopic suture</small>
                 </h1>
             </div>
@@ -97,7 +97,7 @@
 
         <!-- Portfolio Item Row -->
         <section class="row">
-		<div>FIGURES OF METOPIC SUTURE CLOSURE</div>
+		<div class="col-md-4">FIGURES OF METOPIC SUTURE CLOSURE</div>
 
             <div class="col-md-4" id="description">
                 <h3>Project Description</h3>
