--- a/skull/frontal.html
+++ b/skull/frontal.html
@@ -97,7 +97,7 @@
 
         <!-- Portfolio Item Row -->
         <section class="row">
-		<div class="col-md-4">FIGURES OF METOPIC SUTURE CLOSURE!</div>
+		<div class="col-md-4">FIGURES OF METOPIC SUTURE CLOSURE</div>
 
             <div class="col-md-4" id="description">
                 <h3>Project Description</h3>
