--- a/thorax.html
+++ b/thorax.html
@@ -165,7 +165,7 @@
             
             <div class="col-md-4">
                 <h2>Bones of the skull</h2>
-                    <p>The bones of the skull used for juvenile aging in this project are:<p>
+                    <p>The bones of the thorax used for juvenile aging in this project are:<p>
                    	 <ul>
 			    <li><a href="thorax/vert.html">Vertebrae</a></li>
 			    <li><a href="thorax/sternum.html">Sternum</a></li>
