--- a/thorax.html
+++ b/thorax.html
@@ -164,7 +164,7 @@
 </div>
             
             <div class="col-md-4">
-                <h2>Bones of the skull</h2>
+                <h2>Bones of the thorax</h2>
                     <p>The bones of the thorax used for juvenile aging in this project are:<p>
                    	 <ul>
 			    <li><a href="thorax/vert.html">Vertebrae</a></li>
