--- a/skull/frontal.html
+++ b/skull/frontal.html
@@ -100,7 +100,7 @@
 		<div class="col-md-4">FIGURES OF METOPIC SUTURE CLOSURE</div>
 
             <div class="col-md-4" id="description">
-                <h3>Project Description</h3>
+                <h3>Frontal bone</h3>
                 <p>The frontal bone is made up of two separate bones divided down the midline.  They are separated by the metopic suture which fuses within the first few years of life. </p>
             </div>
             
