--- a/skull/frontal.html
+++ b/skull/frontal.html
@@ -107,7 +107,7 @@
             </div>
             
             <div class="col-md-4" id="fixed">
-                <h3>Instruction</h3>
+                <h3>Instructions</h3>
                 <ul>
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.
                     <ul style="float: left; width: 40%;">
