--- a/frontal.html
+++ b/frontal.html
@@ -13,12 +13,12 @@
     <title>J-Skel: Frontal bone</title>
 	
     <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     
    <!-- Custom CSS -->
-    <link href="../css/portfolio-item.css" rel="stylesheet">
-	 <link rel="stylesheet" type="text/css" href="../main.css">
+    <link href="css/portfolio-item.css" rel="stylesheet">
+	 <link rel="stylesheet" type="text/css" href="main.css">
 	
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
