--- a/skull.html
+++ b/skull.html
@@ -13,11 +13,11 @@
     <title>Skull</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../css/portfolio-item.css" rel="stylesheet">
-	 <link rel="stylesheet" type="text/css" href="../main.css">
+    <link href="css/portfolio-item.css" rel="stylesheet">
+	 <link rel="stylesheet" type="text/css" href="main.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
