--- a/skull.html
+++ b/skull.html
@@ -166,7 +166,7 @@
                 <h2>Bones of the skull</h2>
                     <p>The bones of the skull used for juvenile aging in this project are:<p>
                    	 <ul>
-			    <li><a href="frontal.html">Frontal</a></li>
+			    <li><a href="skull/frontal.html">Frontal</a></li>
 			    <li><a href="skull/parietal.html">Parietal</a></li>
 			    <li><a href="skull/temporal.html">Temporal</a></li>
 			    <li><a href="skull/occipital.html">Occipital</a></li>
