--- a/skull.html
+++ b/skull.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>Skull</title>
+    <title>J-Skel: Skull</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
