--- a/skull.html
+++ b/skull.html
@@ -190,6 +190,7 @@
    </g>
 	  </a>
   </g>
+	 </a>
  </g>
 </svg>
 
@@ -199,14 +200,14 @@
                 <h2>Bones of the skull</h2>
                     <p>The bones of the skull used for juvenile aging in this project are:<p>
                    	 <ul>
-			    <li><a href="skull/frontal.html">Frontal</a></li>
-			    <li><a href="skull/parietal.html">Parietal</a></li>
-			    <li><a href="skull/temporal.html">Temporal</a></li>
-			    <li><a href="skull/occipital.html">Occipital</a></li>
-			    <li><a href="skull/maxilla.html">Maxilla</a></li>
-			    <li><a href="skull/sphenoid.html">Sphenoid</a></li>
-			    <li><a href="skull/mandible.html">Mandible</a></li>
-			    <li><a href="skull/dentition.html">Dentition</a></li>
+			    <li><a href="frontal.html">Frontal</a></li>
+			    <li><a href="parietal.html">Parietal</a></li>
+			    <li><a href="temporal.html">Temporal</a></li>
+			    <li><a href="occipital.html">Occipital</a></li>
+			    <li><a href="maxilla.html">Maxilla</a></li>
+			    <li><a href="sphenoid.html">Sphenoid</a></li>
+			    <li><a href="mandible.html">Mandible</a></li>
+			    <li><a href="dentition.html">Dentition</a></li>
                     	</ul>          
                     <li>Compare the bone/element you have to the aging methods provided</li>
                     <li>Input your age range in the "Ages Estimator" box on the right</li>
