--- a/frontal.html
+++ b/frontal.html
@@ -13,12 +13,12 @@
     <title>J-Skel: Frontal bone</title>
 	
     <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     
    <!-- Custom CSS -->
-    <link href="../css/portfolio-item.css" rel="stylesheet">
-	 <link rel="stylesheet" type="text/css" href="../main.css">
+    <link href="css/portfolio-item.css" rel="stylesheet">
+	 <link rel="stylesheet" type="text/css" href="main.css">
 	
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../index.html">Home</a>
+                <a class="navbar-brand" href="index.html">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -59,21 +59,21 @@
 		   <li class="dropdown">
           		<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Elements <span class="caret"></span></a>
          			 <ul class="dropdown-menu">
-            			<li><a href="../skull.html">Skull</a></li>
-            			<li><a href="../upper_limbs.html">Upper Limbs</a></li>
-            			<li><a href="../thorax.html">Thorax</a></li>
-            			<li><a href="../pelvic_girdle.html">Pelvic Girdle</a></li>
-            			<li><a href="../lower_limbs.html">Lower Limbs</a></li>
+            			<li><a href="skull.html">Skull</a></li>
+            			<li><a href="upper_limbs.html">Upper Limbs</a></li>
+            			<li><a href="thorax.html">Thorax</a></li>
+            			<li><a href="pelvic_girdle.html">Pelvic Girdle</a></li>
+            			<li><a href="lower_limbs.html">Lower Limbs</a></li>
          			 </ul>
         			</li>
                     <li>
-                        <a href="../about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="../references.html">References</a>
+                        <a href="references.html">References</a>
                     </li>
                     <li>
-                        <a href="../contact.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -2086,7 +2086,7 @@
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../../js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
