--- a/dentition.html
+++ b/dentition.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>J-Skel: Skull</title>
+    <title>J-Skel: Dentition</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -86,8 +86,8 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12" id="head">
-                <h1 class="page-header">J-Skel
-                    <small>The Digital Age Estimator of Subadult Skeletons</small>
+                <h1 class="page-header">Subadult Dentition
+                    <small>   Formation and eruption schedules of teeth</small>
                 </h1>
             </div>
         </div>
