--- a/sphenoid.html
+++ b/sphenoid.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>Fontanelle</title>
+    <title>J-Skel: Sphenoid</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
