--- a/maxilla.html
+++ b/maxilla.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>J-Skel: Maxillae</title>
+    <title>J-Skel: Maxilla</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
