--- a/sphenoid.html
+++ b/sphenoid.html
@@ -89,7 +89,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Skull
+                <h1 class="page-header">Sphenoid
                     <small>The Digital Age Estimator of Subadult Skeletons</small>
                 </h1>
             </div>
