--- a/occipital.html
+++ b/occipital.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>Fontanelle</title>
+    <title>J-Skel: Occipital</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -89,7 +89,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Skull
+                <h1 class="page-header">Occipital
                     <small>The Digital Age Estimator of Subadult Skeletons</small>
                 </h1>
             </div>
