--- a/frontal.html
+++ b/frontal.html
@@ -106,8 +106,8 @@
                 <p>The frontal bone is made up of two separate bones divided down the midline.  They are separated by the metopic suture which fuses within the first few years of life. </p>
             </div>
             
-            <div class="col-md-4" id="fixed">
-                <h3>Instruction</h3>
+            <div class="col-md-4" class="fixed">
+                <h3>Age Estimator</h3>
                 <ul>
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.
                     <ul style="float: left; width: 40%;">
