--- a/frontal.html
+++ b/frontal.html
@@ -103,10 +103,10 @@
 
             <div class="col-md-4" id="description">
                 <h3>Frontal bone</h3>
-                <p>The frontal bone is made up of two separate bones divided down the midline.  They are separated by the metopic suture which fuses within the first few years of life. </p>
+                <p>In adults and later juvenility, the frontal is one single midline bone. During prenatal growth, the frontal ossifies and develops as two halves separated by the metopic suture.  Studies have shown (CITATIONS) that the metopic sutures normally fuses to create one single frontal bone between the ages of 2 and 4 years.  </p>
             </div>
             
-            <div class="col-md-4"> 
+            <div class="col-md-3"> 
 		    <div class="fixed">
                 <h3>Age Estimator</h3>
                 <ul>
