--- a/frontal.html
+++ b/frontal.html
@@ -93,8 +93,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12" id="head">
-                <h1 class="page-header">Frontal bone:
-                    <small>Closure of the metopic suture</small>
+                <h1 class="page-header">Frontal bone
                 </h1>
             </div>
         </div>
