--- a/frontal.html
+++ b/frontal.html
@@ -103,14 +103,14 @@
 
         <!-- Portfolio Item Row -->
         <section class="row">
-		<div class="col-md-4">FIGURES OF METOPIC SUTURE CLOSURE</div>
+		<div class="col-lg-4">FIGURES OF METOPIC SUTURE CLOSURE</div>
 
-            <div class="col-md-3" id="description">
+            <div class="col-lg-3" id="description">
                 <h3>Frontal bone</h3>
                 <p>In adults and later juvenility, the frontal is one single midline bone. During prenatal growth, the frontal ossifies and develops as two halves separated by the metopic suture.  Studies have shown (CITATIONS) that the metopic sutures normally fuses to create one single frontal bone between the ages of 2 and 4 years.  </p>
             </div>
             
-            <div class="col-md-3"> 
+            <div class="col-lg-3"> 
 		    <div class="fixed">
                 <h3>Age Estimator</h3>
                 <ul>
