--- a/occipital.html
+++ b/occipital.html
@@ -89,9 +89,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Occipital
-                    <small>The Digital Age Estimator of Subadult Skeletons</small>
-                </h1>
+                <h1 class="page-header">Occipital</h1>
             </div>
         </div>
         <!-- /.row -->
@@ -163,21 +161,14 @@
 </div>
             
             <div class="col-md-4">
-                <h2>Bones of the skull</h2>
-                    <p>The bones of the skull used for juvenile aging in this project are:<p>
-                   	 <ul>
-			    <li><a href="skull/frontal.html">Frontal</a></li>
-			    <li><a href="skull/parietal.html">Parietal</a></li>
-			    <li><a href="skull/temporal.html">Temporal</a></li>
-			    <li><a href="skull/occipital.html">Occipital</a></li>
-			    <li><a href="skull/maxilla.html">Maxilla</a></li>
-			    <li><a href="skull/sphenoid.html">Sphenoid</a></li>
-			    <li><a href="skull/mandible.html">Mandible</a></li>
-			    <li><a href="skull/dentition.html">Dentition</a></li>
-                    	</ul>          
-                    <li>Compare the bone/element you have to the aging methods provided</li>
-                    <li>Input your age range in the "Ages Estimator" box on the right</li>
-                    <li>Hit "Save Age Range" if you wish to look at another bone or element</li>
+                <h2>The Occipital</h2>
+                    <p>Occipital Bone
+	The occipital bone is made up of multiple ossification centers that appear in utero.  Postnatal fusion of these ossification centers to each other are not all concurrent, but occur in a specific order and on a known schedule.  Around birth, the occipital is usually split into four major components: pars squama (1), pars lateralis (2), and pars basilaris (1).  
+	The pars squama is made up of separate ossification centers that begin to fuse in utero.  At birth, fusion is not usually complete and the remnant of the sutura mendosa is present.  The sutura mendosa runs infero-laterally and usually disappears by the end of the first year after birth (CITATIONS).
+	The pars laterali (PLURAL???) are the bilateral ossification centers that house the occipital condyles as well as make up the majority of the border of the foramen magnum.  Fusion to the pars squama occurs first and takes place between the first and third years (CITATIONS).
+	The pars basilaris makes up the base of the occipital in adults.  On the posterior aspect, fusion of the pars basilaris to the pars lateralis takes places between years 5 and 7 (CITATIONS).  The anterior surface later fuses to the sphenoid at the spheno-occipital synchondrosis.  Fusion of these surfaces tends to be highly variable and even different between the sexes.  Fusion of the spheno-occipital synchorosis in females takes places between 11 and 16 years (CITATIONS) while in males, fusion occurs between 13 and 18 years (CITATIONS).  As a result, relying on this single fusion center for age-at-death estimations is not entirely accurate but can be used to corroborate the age estimation based on other areas.
+<p>
+                   	 
 		</div>
 		
 		 <div class="col-md-4"> 
