--- a/occipital.html
+++ b/occipital.html
@@ -174,7 +174,7 @@
 		 <div class="col-md3"> 
 			 <div class="fixed">
              	<h3>Age Range Box</h3>
-               		<p>Click on the bone group on the diagram of which bone you wish to assess the age.<p>
+               		<p>Click on the bone group on the diagram of which bone you wish to assess the age.</p>
 			    
 			<button onclick="myFunction()">Unfused</button>
 				<p id="unfused"></p>
