--- a/occipital.html
+++ b/occipital.html
@@ -247,7 +247,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; J-Skel 2017</p>
                 </div>
             </div>
             <!-- /.row -->
