--- a/frontal.html
+++ b/frontal.html
@@ -102,6 +102,9 @@
        
 
         <!-- Portfolio Item Row -->
+	<div class="row">
+		<a href="index.html">Home > <a href ="skull.html"> Skull</a></a>
+	    </div>
         <section class="row">
 		<div class="col-lg-4">FIGURES OF METOPIC SUTURE CLOSURE</div>
 
