--- a/frontal.html
+++ b/frontal.html
@@ -91,6 +91,10 @@
     <div class="container">
 
         <!-- Portfolio Item Heading -->
+<div class="row">
+	<a href="index.html">Home</a><p>></p><a href ="skull.html">Skull</a>
+</div>
+	    
         <div class="row">
             <div class="col-lg-12" id="head">
                 <h1 class="page-header">Frontal bone
@@ -102,9 +106,6 @@
        
 
         <!-- Portfolio Item Row -->
-	<div class="row">
-		<a href="index.html">Home > <a href ="skull.html"> Skull</a></a>
-	    </div>
         <section class="row">
 		<div class="col-lg-4">FIGURES OF METOPIC SUTURE CLOSURE</div>
 
