--- a/frontal.html
+++ b/frontal.html
@@ -92,7 +92,7 @@
 
         <!-- Portfolio Item Heading -->
 <div class="row">
-	<p><a href="index.html">Home</a>-<a href ="skull.html">Skulls</a></p>
+	<p><a href="index.html">Home</a>  -  <a href ="skull.html">Skull</a></p>
 </div>
 	    
         <div class="row">
