--- a/frontal.html
+++ b/frontal.html
@@ -92,7 +92,7 @@
 
         <!-- Portfolio Item Heading -->
 <div class="row">
-	<p><a href="index.html">  Home</a>    -    <a href ="skull.html">Skull</a></p>
+	<h2>Back to <a href ="skull.html">SKULL</a></h2>
 </div>
 	    
         <div class="row">
