--- a/frontal.html
+++ b/frontal.html
@@ -117,7 +117,8 @@
             <div class="col-lg-3"> 
 		    <div class="fixed">
                 <h3>Age Estimator</h3>
-			<p>Click on the bone group on the diagram of which bone you wish to assess the age.</p>
+			<p>Click on the bone group on the diagram of 
+				which bone you wish to assess the age.</p>
 			    
 		<button onclick="myFunction()">Unfused</button>
 			<p id="unfused"></p>
