--- a/skull.html
+++ b/skull.html
@@ -101,7 +101,7 @@
         <!-- Portfolio Item Row -->
         <section class="row">
 
-            <div class="col-md-6">
+            <div class="col-lg-6">
                <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Inkscape (http://www.inkscape.org/) -->
 <svg width="66.204mm" height="133.96mm" version="1.1" viewBox="0 0 66.203554 133.96285" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
