--- a/skull.html
+++ b/skull.html
@@ -211,9 +211,9 @@
 			    <li><a href="mandible.html">Mandible</a></li>
 			    <li><a href="dentition.html">Dentition</a></li>
                     	</ul>          
-                    <li>Compare the bone/element you have to the aging methods provided</li>
-                    <li>Input your age range in the "Ages Estimator" box on the right</li>
-                    <li>Hit "Save Age Range" if you wish to look at another bone or element</li>
+                    <p>Compare the bone/element you have to the aging methods provided</p>
+		    <p>Input your age range in the "Ages Estimator" box on the right</p>
+		    <p>Hit "Save Age Range" if you wish to look at another bone or element</p>
 		</div>
         </section>
             
