--- a/skull.html
+++ b/skull.html
@@ -201,6 +201,7 @@
 </div>
             
             <div class="col-md-4">
+		    <div class="description">
                 <h2>Bones of the skull</h2>
                     <p>The bones of the skull used for juvenile aging in this project are:<p>
                    	 <ul>
@@ -210,10 +211,13 @@
 			    <li><a href="sphenoid.html">Sphenoid</a></li>
 			    <li><a href="mandible.html">Mandible</a></li>
 			    <li><a href="dentition.html">Dentition</a></li>
-                    	</ul>          
-                    <p>Compare the bone/element you have to the aging methods provided</p>
-		    <p>Input your age range in the "Ages Estimator" box on the right</p>
-		    <p>Hit "Save Age Range" if you wish to look at another bone or element</p>
+                    	</ul> 
+		    <ol>
+                    <li>Compare the bone/element you have to the quick description of aging methods provided for that specific bone.</li>
+		    <li>Select the level of fusion or development for the bone provided in the <b>Age Estimator</b>box.</li>
+		    <li>Hit "Save Age Range" if you wish to look at another bone or element</li>
+		    </ol>
+		    </div>
 		</div>
         </section>
             
