--- a/thorax.html
+++ b/thorax.html
@@ -211,7 +211,7 @@
 	</div>
 	
 	<div class="col-lg-4">
-		<div class="fixed">
+		<div class="estimate">
 			<h2>Age Estimator</h2>
 			<p>BUTTONS with stages of ossification and union</p>
 		</div>
@@ -229,7 +229,7 @@
 	</div>
 	
 	<div class="col-lg-4">
-		<div class="fixed">
+		<div class="estimate">
 			<h2>Age Estimator</h2>
 			<p>BUTTONS with stages of ossification and union</p>
 		</div>
@@ -247,7 +247,7 @@
 	</div>
 	
 	<div class="col-lg-4">
-		<div class="fixed">
+		<div class="estimate">
 			<h2>Age Estimator</h2>
 			<p>BUTTONS with stages of ossification and union</p>
 		</div>
@@ -265,7 +265,7 @@
 	</div>
 	
 	<div class="col-lg-4">
-		<div class="fixed">
+		<div class="estimate">
 			<h2>Age Estimator</h2>
 			<p>BUTTONS with stages of ossification and union</p>
 		</div>
@@ -283,7 +283,7 @@
 	</div>
 	
 	<div class="col-lg-4">
-		<div class="fixed">
+		<div class="estimate">
 			<h2>Age Estimator</h2>
 			<p>BUTTONS with stages of ossification and union</p>
 		</div>
@@ -301,7 +301,7 @@
 	</div>
 	
 	<div class="col-lg-4">
-		<div class="fixed">
+		<div class="estimate">
 			<h2>Age Estimator</h2>
 			<p>BUTTONS with stages of ossification and union</p>
 		</div>
@@ -319,7 +319,7 @@
 	</div>
 	
 	<div class="col-lg-4">
-		<div class="fixed">
+		<div class="estimate">
 			<h2>Age Estimator</h2>
 			<p>BUTTONS with stages of ossification and union</p>
 		</div>
