--- a/thorax.html
+++ b/thorax.html
@@ -168,14 +168,14 @@
                    	 <ul>
 			    <li>Vertebrae</li>
 				 <ul>
-					 <li><a name="atlas1">C1 - Atlas</a></li>
-					 <li><a name="axis1">C2 - Axis</a></li>
-					 <li><a name="cerv1">Cervical vertebrae</a></li>
-					 <li><a name="thor1">Thoracic vertebrae</a></li>
-					 <li><a name="lum1">Lumbar vertebrae</a></li>
+					 <li>C1 - Atlas</li>
+					 <li>C2 - Axis</li>
+					 <li>Cervical vertebrae</li>
+					 <li>Thoracic vertebrae</li>
+					 <li>Lumbar vertebrae</li>
 				 </ul>
-			    <li><a name="sternum1">Sternum</a></li>
-			    <li><a name="ribs1">Ribs</a></li>
+			    <li>Sternum</li>
+			    <li>Ribs</li>
 			    
                     	</ul>          
                     <li>Compare the bone/element you have to the aging methods provided</li>
