--- a/thorax.html
+++ b/thorax.html
@@ -182,6 +182,7 @@
 </div>
             
 	<div class="col-md-6">
+		<div class="region-intro">
                 <h2>Bones of the thorax</h2>
                     <p>The bones of the thorax used for juvenile aging in this project are:<p>
                    	 <ul>
@@ -200,6 +201,7 @@
                     <li>Compare the bone/element you have to the aging methods provided</li>
                     <li>Input your age range in the "Ages Estimator" box on the right</li>
                     <li>Hit "Save Age Range" if you wish to look at another bone or element</li>
+		</div>
 	</div>
 </section>
         
