--- a/skull.html
+++ b/skull.html
@@ -33,9 +33,9 @@
 			}
 		
 		function myFunction() {
-    			document.getElementById("unfused").innerHTML = "Less than 2 years of age";
-			document.getElementById("fusing").innerHTML = "Around 2-4 years of age";
-			document.getElementById("fused").innerHTML = "Older than 4 years of age";
+    			document.getElementById("unfused").value = "Less than 2 years of age";
+			document.getElementById("fusing").value = "Around 2-4 years of age";
+			document.getElementById("fused").value = "Older than 4 years of age";
 			}
 	</style>
 </head>
