--- a/skull.html
+++ b/skull.html
@@ -237,11 +237,12 @@
 			
 			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
 			
-				<br><br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
+				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
 				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2-4 years of age';">
 
 				<br><br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Older than 3 years of age';">
+				<br>
 		</div>
 	</div>
 </section>
