--- a/skull.html
+++ b/skull.html
@@ -243,7 +243,7 @@
 
 				<br><br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
 			
-				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='';">
+				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 		</div>
 	</div>
